--- a/gal/Cargo.toml
+++ b/gal/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-gal-primitive = { path = "../gal-primitive" }
+gal-runtime = { path = "../gal-runtime" }
+serde_yaml = "0.8"
