--- a/gal-primitive/Cargo.toml
+++ b/gal-primitive/Cargo.toml
@@ -5,3 +5,7 @@ edition = "2021"
 
 [dependencies]
 gal-script = { path = "../gal-script" }
+serde = { version = "1.0", features = ["derive"] }
+
+[dev-dependencies]
+serde_yaml = "0.8"
