[WIP] full expression.

--- a/sample.yaml
+++ b/sample.yaml
@@ -14,21 +14,17 @@ paras:
     actions:
       - 789
       -
-        -
-          text: Switch 1
-          enabled: true
-          action: |
-            { $s1 = true }
-        -
-          text: Switch 2
-          enabled: true
-          action: |
-            { $s2 = true }
+        bind: $s
+        items:
+          -
+            text: Switch 1
+          -
+            text: Switch 2
     next: c
   -
     tag: c
     title: Paragraph c
     actions:
-      - |
-        { if($s1, "s1", if($s2, "s2", "Not chosen!")) }
-    next: ""
+      - >
+        { if($s == 1, "s1", if($s == 2, "s2", "Not chosen!")) }
+    next: ~
