--- a/sample.yaml
+++ b/sample.yaml
@@ -17,16 +17,22 @@ paras:
         bind: $s
         items:
           -
-            text: Switch 1
+            text: To C
           -
-            text: Switch 2
-    next: c
+            text: To D
+    next: >
+      { if($s == 1, "c", if($s == 2, "d")) }
   -
     tag: c
     title: Paragraph c
     actions:
-      - >
-        { if($s == 1, "s1", if($s == 2, "s2", ~)) }
+      - Here is C.
       - >
         { "s" + $s }
+    next: ~
+  -
+    tag: d
+    title: Paragraph d
+    actions:
+      - Here is D.
     next: ~
