Re-move locals to Context.

--- a/gal-script/Cargo.toml
+++ b/gal-script/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 lalrpop-util = { version = "0.19", features = ["lexer"] }
 regex = "1"
+serde = "1.0"
 
 [build-dependencies]
 lalrpop = "0.19"
