--- a/gal-script/Cargo.toml
+++ b/gal-script/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 lalrpop-util = { version = "0.19", features = ["lexer"] }
 regex = "1"
 serde = "1.0"
+fp-bindgen = "1.0"
 
 [build-dependencies]
 lalrpop = "0.19"
