--- a/gal-plugin/Cargo.toml
+++ b/gal-plugin/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-gal-script = { path = "../gal-script" }
+gal-bindings = { path = "../gal-bindings" }
 serde = "1.0"
 fp-bindgen-support = { version = "1.0", features = ["async", "host"] }
 wasmer = { version = "2.2", default-features = false }
