--- a/gal-plugin/Cargo.toml
+++ b/gal-plugin/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 gal-bindings = { path = "../gal-bindings" }
 serde = "1.0"
-fp-bindgen-support = { version = "1.0", features = ["async", "host"] }
+fp-bindgen-support = { version = "1.0", features = ["host"] }
 wasmer = { version = "2.2", default-features = false }
 wasmer-engine-universal = { version = "2.2", features = ["compiler"] }
 
