--- a/gal-bindings/Cargo.toml
+++ b/gal-bindings/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 fp-bindgen = "1.0"
-fp-bindgen-support = { version = "1.0", features = ["guest"] }
+fp-bindgen-support = { version = "1.0", features = ["async", "guest"] }
 serde = "1.0"
 
 [dev-dependencies]
