--- a/gal-runtime/Cargo.toml
+++ b/gal-runtime/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 [dependencies]
 gal-script = { path = "../gal-script" }
 gal-primitive = { path = "../gal-primitive" }
-gal-plugin = { path = "../gal-plugin" }
+fp-bindgen-support = { version = "1.0", features = ["async", "host"] }
+wasmer = { version = "2.2", default-features = false, features = ["universal", "singlepass"] }
