--- a/gal-runtime/Cargo.toml
+++ b/gal-runtime/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 gal-script = { path = "../gal-script" }
 gal-primitive = { path = "../gal-primitive" }
 fp-bindgen-support = { version = "1.0", features = ["async", "host"] }
-wasmer = { version = "2.2", default-features = false, features = ["universal", "singlepass"] }
+wasmer = { version = "2.2", default-features = false, features = ["universal", "cranelift"] }
