--- a/gal-bindings/Cargo.toml
+++ b/gal-bindings/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
 edition = "2018"
 
 [dependencies]
-fp-bindgen-support = { version = "1.0", features = ["async", "guest"] }
 serde = "1.0"
+wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git" }
 
 [dev-dependencies]
 serde_yaml = "0.8"
