--- a/gal-bindings/Cargo.toml
+++ b/gal-bindings/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
 edition = "2018"
 
 [dependencies]
-serde = "1.0"
+gal-primitive = { path = "../gal-primitive" }
 wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git" }
 
 [dev-dependencies]
