--- a/sample.yaml
+++ b/sample.yaml
@@ -14,25 +14,17 @@ paras:
     title: Paragraph b
     actions:
       - 789
-      -
-        items:
-          -
-            text: To C
-            action: >
-              { $s = 1 }
-          -
-            text: To D
-            action: >
-              { $s = 2 }
-    next: >
-      { if($s == 1, "c", if($s == 2, "d")) }
+      - >
+      Choose where to go:
+      \switch{To C}{$s = 1}
+      \switch{To D}{$s = 2}
+    next: \exec{if($s == 1, "c", if($s == 2, "d"))}
   -
     tag: c
     title: Paragraph c
     actions:
       - Here is C.
-      - >
-        { format.fmt("s{}", $s) }
+      - \exec{format.fmt("s{}", $s)}
     next: ~
   -
     tag: d
