--- a/gal/Cargo.toml
+++ b/gal/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 [dependencies]
 gal-runtime = { path = "../gal-runtime" }
 serde_yaml = "0.8"
+clap = { version = "3.1", features = ["derive"] }
+anyhow = "1.0"
