--- a/gal-script/Cargo.toml
+++ b/gal-script/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 gal-primitive = { path = "../gal-primitive" }
 lalrpop-util = { version = "0.19", features = ["lexer"] }
 regex = "1"
+log = "0.4"
 
 [build-dependencies]
 lalrpop = "0.19"
