--- a/gal/Cargo.toml
+++ b/gal/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 gal-runtime = { path = "../gal-runtime" }
 serde_yaml = "0.8"
 clap = { version = "3.1", features = ["derive"] }
+env_logger = "0.9"
