--- a/gal-locale/Cargo.toml
+++ b/gal-locale/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 cfg-if = "1.0"
 serde = "1.0"
+thiserror = "1.0"
 
 [target.'cfg(windows)'.dependencies]
 windows-sys = { version = "0.36", features = [
