--- a/gal-runtime/Cargo.toml
+++ b/gal-runtime/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 gal-script = { path = "../gal-script" }
 gal-locale = { path = "../gal-locale" }
 serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.8"
 wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen.git" }
 unicode-width = "0.1"
 
