--- a/gal-web/Cargo.toml
+++ b/gal-web/Cargo.toml
@@ -10,5 +10,5 @@ portpicker = "0.1"
 webbrowser = "0.7"
 clap = { version = "3.1", features = ["derive"] }
 actix-web = "4"
-actix-files = "0.6"
+actix-web-lab = "0.16"
 serde_json = "1.0"
