--- a/gal-gui/package.json
+++ b/gal-gui/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "gal-webfront",
+  "name": "gal-gui",
+  "private": true,
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check build-only",
-    "preview": "vite preview --port 4173",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit"
+    "build": "vue-tsc --noEmit && vite build",
+    "preview": "vite preview",
+    "tauri": "tauri"
   },
   "dependencies": {
-    "axios": "^0.27.2",
+    "@tauri-apps/api": "^1.0.1",
     "bootstrap": "^5.1.3",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^1.0.1",
     "@types/node": "^16.11.41",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/tsconfig": "^0.1.3",
-    "npm-run-all": "^4.1.5",
+    "process": "^0.11.10",
     "typescript": "~4.7.4",
+    "url": "^0.11.0",
     "vite": "^2.9.12",
     "vue-tsc": "^0.38.1"
   }
