--- a/gal-gui/Makefile
+++ b/gal-gui/Makefile
@@ -1,5 +1,8 @@
 node_modules: package.json
 	npm install
 
+.PHONY: run release
 run: $(FILE) node_modules
 	npm run tauri dev -- -- -- $<
+release:
+	npm run tauri build
