Fix gui release

--- a/gal-gui/Makefile
+++ b/gal-gui/Makefile
@@ -2,7 +2,7 @@ node_modules: package.json
 	npm install
 
 .PHONY: run release
-run: $(FILE) node_modules
-	npm run tauri dev -- -- -- $<
-release:
+run: node_modules
+	npm run tauri dev -- -- -- $(FILE)
+release: node_modules
 	npm run tauri build
