--- a/gal-locale/Cargo.toml
+++ b/gal-locale/Cargo.toml
@@ -15,3 +15,4 @@ windows-sys = { version = "0.36", features = [
 
 [target.'cfg(not(windows))'.dependencies]
 rust_icu_sys = { version = "2.0", default-features = false, features = ["use-bindgen", "icu_config"] }
+paste = "1.0"
