--- a/gal-gui/src-tauri/Cargo.toml
+++ b/gal-gui/src-tauri/Cargo.toml
@@ -8,11 +8,10 @@ tauri-build = { version = "1.0", features = [] }
 
 [dependencies]
 gal-runtime = { path = "../../gal-runtime" }
-clap = { version = "3.1", features = ["derive"] }
 simple_logger = { version = "2.1", features = ["colors"] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.0", features = ["api-all"] }
+tauri = { version = "1.0", features = ["api-all", "cli"] }
 tauri-plugin-localhost = "0.1"
 portpicker = "0.1"
 
