--- a/gal-gui/src-tauri/Cargo.toml
+++ b/gal-gui/src-tauri/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 tauri-build = { version = "1.0", features = [] }
 
 [dependencies]
+gal-script = { path = "../../gal-script" }
 gal-runtime = { path = "../../gal-runtime" }
 simple_logger = { version = "2.1", features = ["colors"] }
 serde_json = "1.0"
