--- a/gal-gui/package.json
+++ b/gal-gui/package.json
@@ -12,6 +12,7 @@
     "@tauri-apps/api": "^1.0.1",
     "bootstrap": "^5.1.3",
     "vue": "^3.2.37",
+    "vue-bs-modal": "^0.6.5",
     "vue-router": "^4.0.16"
   },
   "devDependencies": {
