--- a/gal-gui/package.json
+++ b/gal-gui/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tauri-apps/api": "^1.0.1",
     "bootstrap": "^5.1.3",
+    "timers-promises": "^1.0.1",
     "vue": "^3.2.37",
     "vue-bs-modal": "^0.6.5",
     "vue-router": "^4.0.16"
