--- a/gal-gui/package.json
+++ b/gal-gui/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^1.0.1",
+    "async-mutex": "^0.3.2",
     "bootstrap": "^5.1.3",
     "timers-promises": "^1.0.1",
     "vue": "^3.2.37",
