--- a/sample.yaml
+++ b/sample.yaml
@@ -43,7 +43,7 @@ paras:
         - /org//ああ。火星の戦力は軒並み向こうに回してんのかもな。
         - /rd//まっそんなのもう関係ないですけどね！
         - /org//上機嫌だな。
-        - /rd/ガンバラナイト/そりゃそうですよ！みんな助かるし、\ref{ch_tkk}も頑張ってたし、俺も頑張らないと！
+        - /rd/ガンバラナイト/そりゃそうですよ！みんな助かるし、\res{ch_tkk}も頑張ってたし、俺も頑張らないと！
         - /org//ああ。
         - そうだ。俺たちが今まで積み上げてきたもんは全部無駄じゃなかった。これからも俺たちが立ち止まらないかぎり道は続く。
       next: gun
