--- a/sample.yaml
+++ b/sample.yaml
@@ -1,6 +1,7 @@
 title: 団長の名場面
 author: 冈田麿里
 plugins: target/wasm32-unknown-unknown/release/
+bgms: bgms
 res:
   ja:
     ch_rd: ライド
@@ -58,7 +59,7 @@ paras:
         - /org//はぁはぁはぁ……なんだよ、結構当たんじゃねぇか。ふっ……
         - /rd//だ……団長……あっ……あぁ……
         - /org//なんて声出してやがる……ライド。
-        - /rd//だって……だって……
+        - /rd//だって……だって……\bgm{0}
         - /org//俺は鉄華団団長オルガ・イツカだぞ。こんくれぇなんてこたぁねぇ。
         - /rd//そんな……俺なんかのために……
         - /org//団員を守んのは俺の仕事だ。
@@ -112,7 +113,7 @@ paras:
         - /org//哈哈哈……什么嘛，我的枪法还挺准的嘛。呵……
         - /rd//团……团长……啊……啊……
         - /org//你的声音为什么要颤抖，莱德。
-        - /rd//因为……因为……
+        - /rd//因为……因为……\bgm{0}
         - /org//我可是铁华团团长奥尔加·伊兹卡啊，这点小伤无关紧要。
         - /rd//为什么……要为了保护我……
         - /org//保护团员就是我的使命。
