--- a/gal-gui/src-tauri/Cargo.toml
+++ b/gal-gui/src-tauri/Cargo.toml
@@ -12,7 +12,7 @@ gal-runtime = { path = "../../gal-runtime" }
 simple_logger = { version = "2.1", features = ["colors"] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.0", features = ["cli", "window-close"] }
+tauri = { version = "1.0", features = ["cli", "protocol-all", "window-close"] }
 tauri-plugin-localhost = "0.1"
 portpicker = "0.1"
 
