--- a/gal-locale/Cargo.toml
+++ b/gal-locale/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 cfg-if = "1.0"
 serde = "1.0"
 thiserror = "1.0"
+anyhow = "1.0"
+widestring = "1.0"
 
 [target.'cfg(windows)'.dependencies]
 windows-sys = { version = "0.36", features = [
