Make translation simpler.

--- a/sample.yaml
+++ b/sample.yaml
@@ -82,50 +82,50 @@ paras:
       title: 备车
       texts:
         - |
-          /rd//团长！车已经准备好了！
-          \switch{哦！}{$end = false}
-          \switch{不要停下来啊！}{$end = true}
+          团长！车已经准备好了！
+          \switch{哦！}{}
+          \switch{不要停下来啊！}{}
           \switch{停下！}{}{false}
     -
       tag: walk
       title: 安静
       texts:
-        - /org//哦！那么我走了。
-        - /kdr//好，路上小心。
+        - 哦！那么我走了。
+        - 好，路上小心。
         - |
-          /rd//感觉真安静啊，街上也没有加拉尔霍恩的人，和总部差别真大啊。
+          感觉真安静啊，街上也没有加拉尔霍恩的人，和总部差别真大啊。
           \switch{安全}{}
           \switch{小心}{}{false}
-        - /org//啊，可能是他们把火星的战力都调到那里去了。
-        - /rd//不过这也和我们没关系了。
-        - /org//心情很愉快啊。
+        - 啊，可能是他们把火星的战力都调到那里去了。
+        - 不过这也和我们没关系了。
+        - 心情很愉快啊。
         - /rd/加把劲骑士/那是当然的了！大家也有救了，\res{ch_tkk}又那么努力，我也要加油了！
-        - /org//啊。
+        - 啊。
         - 没错，我们至今为止所做的一切，并不是全部徒劳的。今后也是，只要我们不停下脚步，道路就会不断延伸。
     -
       tag: gun
       title: 你在干什么啊
       texts:
-        - /td//咕哇！
-        - /rd//团长，你在干什么啊，团长！
-        - /org//呃呃啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊！！！
-        - /ass//呜哦！啊！
-        - /org//哈哈哈……什么嘛，我的枪法还挺准的嘛。呵……
-        - /rd//团……团长……啊……啊……
-        - /org//你的声音为什么要颤抖，莱德。
-        - /rd//因为……因为……\bgm{0}
-        - /org//我可是铁华团团长奥尔加·伊兹卡啊，这点小伤无关紧要。
-        - /rd//为什么……要为了保护我……
-        - /org//保护团员就是我的使命。
-        - /rd//但是！
-        - /org//好了，快走吧！大家都在等着你们。而且……
+        - 咕哇！
+        - 团长，你在干什么啊，团长！
+        - 呃呃啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊！！！
+        - 呜哦！啊！
+        - 哈哈哈……什么嘛，我的枪法还挺准的嘛。呵……
+        - 团……团长……啊……啊……
+        - 你的声音为什么要颤抖，莱德。
+        - 因为……因为……
+        - 我可是铁华团团长奥尔加·伊兹卡啊，这点小伤无关紧要。
+        - 为什么……要为了保护我……
+        - 保护团员就是我的使命。
+        - 但是！
+        - 好了，快走吧！大家都在等着你们。而且……
         - 三日，我终于明白了。
         - 我们的目的地根本不重要，只要继续前进就好了，只要不停下脚步，道路就会不断延伸。
-        - /mktk//道歉的话我是不会原谅你的。
-        - /org//啊，我明白。
+        - 道歉的话我是不会原谅你的。
+        - 啊，我明白。
     -
       tag: end
       title: 不要停下来啊
       texts:
-        - /org//我是不会停下来的，只要你们不停下来，那前面就一定有我！
-        - /org//所以，不要停下来啊……
+        - 我是不会停下来的，只要你们不停下来，那前面就一定有我！
+        - 所以，不要停下来啊……
