--- a/gal-gui/src-tauri/Cargo.toml
+++ b/gal-gui/src-tauri/Cargo.toml
@@ -8,7 +8,7 @@ tauri-build = { version = "1.0", features = [] }
 
 [dependencies]
 gal-runtime = { path = "../../gal-runtime" }
-simple_logger = { version = "2.1", features = ["colors"] }
+flexi_logger = { version = "0.22", default-features = false, features = ["colors"] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.0", features = ["cli", "protocol-all", "window-close"] }
