Adjust background size.

--- a/sample.yaml
+++ b/sample.yaml
@@ -39,7 +39,7 @@ paras:
         - \ch{org}おう！じゃあな。
         - /kdr//はい、お気をつけて。
         - |
-          /rd//なんか静かですね。街の中にはギャラルホルンもいないし本部とはえらい違いだ。
+          /rd//なんか静かですね。街の中にはギャラルホルンもいないし本部とはえらい違いだ。\bg{1}
           \switch{安全}{}
           \switch{気を付け}{}{false}
         - /org//ああ。火星の戦力は軒並み向こうに回してんのかもな。
@@ -53,11 +53,11 @@ paras:
       tag: gun
       title: 何やってんだよ
       texts:
-        - /td//ぐわっ！
+        - /td//ぐわっ！\bg{2}
         - /rd//団長？何やってんだよ？団長！
         - /org//ぐっ！うおぉ～～！
         - /ass//うおっ！あっ！
-        - /org//はぁはぁはぁ……なんだよ、結構当たんじゃねぇか。ふっ……
+        - /org//はぁはぁはぁ……なんだよ、結構当たんじゃねぇか。ふっ……\bg{3}
         - /rd//だ……団長……あっ……あぁ……
         - /org//なんて声出してやがる……ライド。
         - /rd//だって……だって……\bgm{0}
@@ -75,7 +75,7 @@ paras:
       tag: end
       title: 止まるんじゃねぇぞ
       texts:
-        - /org//俺は止まんねぇからよ、お前らが止まんねぇかぎり、その先に俺はいるぞ！
+        - /org//俺は止まんねぇからよ、お前らが止まんねぇかぎり、その先に俺はいるぞ！\bgm{0}\bg{4}
         - /org//だからよ、止まるんじゃねぇぞ……
   zh_Hans:
     -
