--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,9 @@ jobs:
     vmImage: $(image)
   
   steps:
+  - pwsh: rustup target add wasm32-unknown-unknown
+    displayName: "Install WASM32 target"
+
   - pwsh: make test
     displayName: "Test"
 
