--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,18 +8,32 @@ jobs:
   strategy:
     matrix:
       win-x64:
+        platform: 'win'
         target: 'x86_64-pc-windows-msvc'
         image: 'windows-latest'
       linux-x64:
+        platform: 'linux'
         target: 'x86_64-unknown-linux-gnu'
-        image: 'ubuntu-latest'
+        image: 'ubuntu-22.04'
       macos-x64:
+        platform: 'mac'
         target: 'x86_64-apple-darwin'
         image: 'macOS-latest'
   pool:
     vmImage: $(image)
   
   steps:
+  - script: |
+      sudo apt update
+      sudo apt install libwebkit2gtk-4.0-dev libicu-dev
+    condition: eq(variables.platform, 'linux')
+    displayName: "Install dependencies on Linux"
+
+  - script: |
+      brew install icu4c
+    condition: eq(variables.platform, 'mac')
+    displayName: "Install dependencies on MacOS"
+
   - pwsh: rustup target add wasm32-unknown-unknown
     displayName: "Install WASM32 target"
 
