--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ jobs:
     displayName: "Install dependencies on Linux"
 
   - script: |
-      brew install icu4c
+      brew install icu4c pkgconf
     condition: eq(variables.platform, 'mac')
     displayName: "Install dependencies on MacOS"
 
