--- a/gal-locale/Cargo.toml
+++ b/gal-locale/Cargo.toml
@@ -9,11 +9,11 @@ serde = "1.0"
 thiserror = "1.0"
 anyhow = "1.0"
 
-[target.'cfg(windows)'.dependencies]
+[target.'cfg(target_os = "windows")'.dependencies]
 windows-sys = { version = "0.36", features = [
     "Win32_Globalization",
 ] }
 
-[target.'cfg(not(windows))'.dependencies]
+[target.'cfg(not(any(target_os = "windows", target_os = "macos")))'.dependencies]
 rust_icu_sys = "2.0"
 paste = "1.0"
