--- a/gal-gui/src-tauri/Cargo.toml
+++ b/gal-gui/src-tauri/Cargo.toml
@@ -11,7 +11,7 @@ gal-runtime = { path = "../../gal-runtime" }
 flexi_logger = { version = "0.22", default-features = false, features = ["colors"] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.0", features = ["cli", "protocol-all", "window-close"] }
+tauri = { version = "1.0", features = ["cli", "protocol-all", "window-all"] }
 tauri-plugin-localhost = "0.1"
 portpicker = "0.1"
 
