--- a/gal/Cargo.toml
+++ b/gal/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 gal-runtime = { path = "../gal-runtime" }
+tokio = { version = "1", features = ["macros", "rt"] }
 clap = { version = "3.1", features = ["derive"] }
 env_logger = "0.9"
