--- a/examples/Fibonacci/config.yaml
+++ b/examples/Fibonacci/config.yaml
@@ -1,20 +1,16 @@
 title: Fibonacci
 author: Berrysoft
-plugins: ../../target/wasm32-unknown-unknown/release/
 base_lang: en
 paras:
   en:
     -
       tag: init
       texts:
-        - \exec{$n = 10; $a = 1; $b = 1; $i = 1;}
+        - 1
+        - \exec{$n = 50; $a = 1; $b = 1; $i = 1; $b}
       next: loop
     -
       tag: loop
       texts:
-        - \exec{c = $b; $b += $a; $a = c; $i += 1;}
-      next: \exec{if($i < $n, "loop", "end")}
-    -
-      tag: end
-      texts:
-        - \exec{$b}
+        - \exec{c = $b; $b += $a; $a = c; $i += 1; $b}
+      next: \exec{if($i < $n, "loop")}
