--- a/gal-runtime/Cargo.toml
+++ b/gal-runtime/Cargo.toml
@@ -9,6 +9,7 @@ gal-locale = { path = "../gal-locale" }
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
 wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen.git" }
+wasmtime-wasi = "0.38"
 unicode-width = "0.1"
 tokio = { version = "1", features = ["fs"] }
 tokio-stream = { version = "0.1", features = ["fs"] }
