--- a/examples/Fibonacci2/config.yaml
+++ b/examples/Fibonacci2/config.yaml
@@ -1,13 +1,13 @@
 title: Fibonacci2
 author: Berrysoft
-plugins: ../../target/wasm32-unknown-unknown/release/
+plugins: ../../target/wasm32-wasi/release/
 base_lang: en
 paras:
   en:
     -
       tag: init
       texts:
-        - \exec{$n = 50; $a = 1; $b = 1; $i = 1; format.fmt("Starting to calculate Fibonacci {}", $n)}
+        - \exec{$n = random.rnd(50); $a = 1; $b = 1; $i = 1; format.fmt("Starting to calculate Fibonacci {}", $n)}
       next: loop
     -
       tag: loop
