--- a/plugins/random/Cargo.toml
+++ b/plugins/random/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "format"
+name = "random"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,4 +8,5 @@ crate-type = ["cdylib"]
 
 [dependencies]
 gal-bindings = { path = "../../gal-bindings" }
-rt-format = "0.3"
+rand = { version = "0.8", default-features = false, features = ["std_rng"] }
+lazy_static = "1.4"
