--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ jobs:
     condition: eq(variables.platform, 'linux')
     displayName: "Install dependencies on Linux"
 
-  - pwsh: rustup target add wasm32-unknown-unknown
+  - pwsh: rustup target add wasm32-wasi
     displayName: "Install WASM32 target"
 
   - pwsh: make plugins
