Specify the plugins to use.

--- a/examples/Fibonacci2/config.yaml
+++ b/examples/Fibonacci2/config.yaml
@@ -1,6 +1,10 @@
 title: Fibonacci2
 author: Berrysoft
-plugins: ../../target/wasm32-wasi/release/
+plugins:
+  dir: ../../target/wasm32-wasi/release/
+  modules:
+    - random
+    - format
 base_lang: en
 paras:
   en:
