--- a/gal-primitive/Cargo.toml
+++ b/gal-primitive/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 serde = "1.0"
+log = { version = "0.4", features = ["std"] }
+bincode = "2.0.0-rc.1"
 
 [dev-dependencies]
 serde_yaml = "0.8"
