--- a/gal-primitive/Cargo.toml
+++ b/gal-primitive/Cargo.toml
@@ -4,9 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 log = { version = "0.4", features = ["std"] }
-bincode = "2.0.0-rc.1"
 
 [dev-dependencies]
 serde_yaml = "0.8"
