--- a/gal-locale/Cargo.toml
+++ b/gal-locale/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 cfg-if = "1.0"
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
 anyhow = "1.0"
 
