--- a/gal-gui/package.json
+++ b/gal-gui/package.json
@@ -14,7 +14,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@tauri-apps/api": "^1.0.2",
     "async-mutex": "^0.3.2",
-    "bootswatch": "^5.1.3",
+    "bootstrap-dark-5": "^1.1.3",
     "timers-promises": "^1.0.1",
     "vue": "^3.2.37",
     "vue-bs-modal": "^0.6.6",
