--- a/gal-bindings/Cargo.toml
+++ b/gal-bindings/Cargo.toml
@@ -6,9 +6,11 @@ edition = "2021"
 
 [dependencies]
 gal-primitive = { path = "../gal-primitive" }
+gal-bindings-types = { path = "../gal-bindings-types" }
 gal-bindings-impl = { path = "../gal-bindings-impl" }
 concat-idents = "1.1"
 rmp-serde = "1.1"
+log = "0.4"
 
 [dev-dependencies]
 serde_yaml = "0.8"
