--- a/gal-primitive/Cargo.toml
+++ b/gal-primitive/Cargo.toml
@@ -4,8 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
-log = { version = "0.4", features = ["std"] }
+serde = "1.0"
 
 [dev-dependencies]
 serde_yaml = "0.8"
