--- a/gal-bindings/Cargo.toml
+++ b/gal-bindings/Cargo.toml
@@ -9,6 +9,7 @@ gal-primitive = { path = "../gal-primitive" }
 gal-bindings-types = { path = "../gal-bindings-types" }
 gal-bindings-impl = { path = "../gal-bindings-impl" }
 concat-idents = "1.1"
+serde = "1.0"
 rmp-serde = "1.1"
 log = "0.4"
 
