--- a/gal-runtime/Cargo.toml
+++ b/gal-runtime/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 gal-bindings-types = { path = "../gal-bindings-types" }
+gal-fallback = { path = "../gal-fallback" }
 gal-script = { path = "../gal-script" }
 gal-locale = { path = "../gal-locale" }
 serde = { version = "1.0", features = ["derive"] }
