--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "gal-fallback",
     "gal-runtime",
     "gal-script",
+    "gal-settings",
     "gal",
     "gal-gui/src-tauri",
     "gal-bindings-types",
