--- a/gal-settings/Cargo.toml
+++ b/gal-settings/Cargo.toml
@@ -11,3 +11,4 @@ serde_json = "1.0"
 dirs = "4.0"
 anyhow = "1.0"
 tokio = { version = "1", features = ["fs"] }
+tokio-stream = { version = "0.1", features = ["fs"] }
