--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -1,6 +1,6 @@
 PROJECT_ROOT:=..
 
-PLUGIN_NAMES:=format markdown random
+PLUGIN_NAMES:=format slog markdown random
 PLUGIN_TARGETS:=$(PLUGIN_NAMES:%=$(PROJECT_ROOT)/target/wasm32-wasi/release/%.wasm)
 
 .PHONY: $(PLUGIN_TARGETS)
