--- a/examples/Gacha/config.yaml
+++ b/examples/Gacha/config.yaml
@@ -5,6 +5,7 @@ plugins:
   dir: ../../target/wasm32-wasi/release/
   modules:
     - format
+    - slog
     - random
 base_lang: zh_Hans
 paras:
@@ -69,6 +70,7 @@ paras:
               $temp5 = 0,
               $temp5 += 1,
             );
+            slog.info(if(current5, 5, if(current4, 4, 3)), " star");
           }
       next: |
         \exec{
