--- a/gal-runtime/Cargo.toml
+++ b/gal-runtime/Cargo.toml
@@ -5,12 +5,12 @@ edition = "2021"
 
 [dependencies]
 gal-bindings-types = { path = "../gal-bindings-types" }
-gal-settings = { path = "../gal-settings" }
 gal-fallback = { path = "../gal-fallback" }
 gal-script = { path = "../gal-script" }
 gal-locale = { path = "../gal-locale" }
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
+serde_json = "1.0"
 rmp-serde = "1.1"
 anyhow = "1.0"
 wasmtime = "0.38"
@@ -19,6 +19,7 @@ unicode-width = "0.1"
 tokio = { version = "1", features = ["fs"] }
 tokio-stream = { version = "0.1", features = ["fs"] }
 async-stream = "0.3"
+dirs = "4.0"
 
 [dev-dependencies]
 serde_yaml = "0.8"
