--- a/gal-script/Cargo.toml
+++ b/gal-script/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 gal-primitive = { path = "../gal-primitive" }
 lalrpop-util = { version = "0.19", features = ["lexer"] }
+serde = { version = "1.0", features = ["derive"] }
 regex = "1"
 log = "0.4"
 
