--- a/gal-bindings-types/Cargo.toml
+++ b/gal-bindings-types/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 
 [dependencies]
 gal-fallback = { path = "../gal-fallback" }
+gal-script = { path = "../gal-script" }
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
