--- a/gal-bindings-types/Cargo.toml
+++ b/gal-bindings-types/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2021"
 gal-fallback = { path = "../gal-fallback" }
 gal-script = { path = "../gal-script" }
 serde = { version = "1.0", features = ["derive"] }
-log = "0.4"
+log = { version = "0.4", features = ["serde"] }
