Add gal-latex to pipelines.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,3 +40,6 @@ jobs:
 
   - pwsh: make release-gui
     displayName: "Build GUI"
+
+  - pwsh: make release-latex
+    displayName: "Build LaTeX compiler"
