--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,9 +7,17 @@ jobs:
 - job: Build
   strategy:
     matrix:
+      win-x86:
+        platform: 'win'
+        target: 'i686-pc-windows-msvc'
+        image: 'windows-latest'
       win-x64:
         platform: 'win'
         target: 'x86_64-pc-windows-msvc'
+        image: 'windows-latest'
+      win-arm64:
+        platform: 'win'
+        target: 'aarch64-pc-windows-msvc'
         image: 'windows-latest'
       linux-x64:
         platform: 'linux'
@@ -18,6 +26,10 @@ jobs:
       macos-x64:
         platform: 'mac'
         target: 'x86_64-apple-darwin'
+        image: 'macOS-latest'
+      macos-arm64:
+        platform: 'mac'
+        target: 'aarch64-apple-darwin'
         image: 'macOS-latest'
   pool:
     vmImage: $(image)
@@ -29,8 +41,10 @@ jobs:
     condition: eq(variables.platform, 'linux')
     displayName: "Install dependencies on Linux"
 
-  - pwsh: rustup target add wasm32-wasi
-    displayName: "Install WASM32 target"
+  - pwsh: |
+      rustup target add $(target)
+      rustup target add wasm32-wasi
+    displayName: "Install targets"
 
   - pwsh: make plugins
     displayName: "Build plugins"
