Fix pipelines to specify target.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,11 +49,13 @@ jobs:
   - pwsh: make plugins
     displayName: "Build plugins"
 
-  - pwsh: make release
-    displayName: "Build CLI"
+  - pwsh: |
+      cd gal-gui
+      npm install
+      npm run build
+    displayName: "Build GUI frontend"
 
-  - pwsh: make release-gui
-    displayName: "Build GUI"
-
-  - pwsh: make release-latex
-    displayName: "Build LaTeX compiler"
+  - pwsh: |
+      $env:STATIC_VCRUNTIME=false
+      cargo build --target=$(target) --release
+    displayName: "Build all"
