--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -1,15 +1,13 @@
-PROJECT_ROOT:=..
+.PHONY: test clean update
+test:
+	cargo test
+clean:
+	cargo clean
+update:
+	cargo update
 
-PLUGIN_NAMES:=format galog markdown random
-PLUGIN_TARGETS:=$(PLUGIN_NAMES:%=$(PROJECT_ROOT)/target/wasm32-wasi/release/%.wasm)
-
-.PHONY: $(PLUGIN_TARGETS)
-plugins: $(PLUGIN_TARGETS)
-
-define plugin-tpl
-$(PROJECT_ROOT)/target/wasm32-wasi/release/$(1).wasm:
-	cargo build --package $(1) --target=wasm32-wasi --release
-
-endef
-
-$(eval $(foreach p,$(PLUGIN_NAMES),$(call plugin-tpl,$(p))))
+.PHONY: plugins
+plugins:
+	cargo build --target=wasm32-wasi --release
+	mkdir -p ../examples/plugins
+	cp target/wasm32-wasi/release/*.wasm ../examples/plugins/
