--- a/examples/Fibonacci2/config.yaml
+++ b/examples/Fibonacci2/config.yaml
@@ -1,7 +1,7 @@
 title: Fibonacci2
 author: Berrysoft
 plugins:
-  dir: ../../target/wasm32-wasi/release/
+  dir: ../plugins/
   modules:
     - random
     - format
