--- a/examples/Markdown/config.yaml
+++ b/examples/Markdown/config.yaml
@@ -1,7 +1,7 @@
 title: Markdown
 author: Berrysoft
 plugins:
-  dir: ../../target/wasm32-wasi/release/
+  dir: ../plugins/
   modules:
     - markdown
 base_lang: en
