--- a/plugins/gal-bindings/Cargo.toml
+++ b/plugins/gal-bindings/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
 edition = "2021"
 
 [dependencies]
-gal-primitive = { path = "../gal-primitive" }
-gal-bindings-types = { path = "../gal-bindings-types" }
+gal-primitive = { path = "../../utils/gal-primitive" }
+gal-bindings-types = { path = "../../utils/gal-bindings-types" }
 gal-bindings-impl = { path = "../gal-bindings-impl" }
 concat-idents = "1.1"
 serde = "1.0"
